# samples

./: LICENSE
AVFrameMatConverter/: AVFrameMatConverter.sln
AVFrameMatConverter/av_seek_frame/: av_seek_frame.cpp  av_seek_frame.vcxproj  av_seek_frame.vcxproj.filters
AVFrameMatConverter/avframe2mat/: avframe2mat.cpp  avframe2mat.vcxproj  avframe2mat.vcxproj.filters
AVFrameMatConverter/libavcv/: H264Decoder.cpp  H264Decoder.hpp  libavcv.cpp  libavcv.h  libavcv.vcxproj  libavcv.vcxproj.filters
AVFrameMatConverter/mat2avframe/: mat2avframe.cpp  mat2avframe.vcxproj  mat2avframe.vcxproj.filters
Blazor/App1/: App1.sln  README.md
Blazor/App1/Client/: App1.Client.csproj  LibChart.cs  Program.cs  _Imports.razor  libman.json
Blazor/App1/Server/: App1.Server.csproj  Program.cs
Blazor/App1/Shared/: ApiArgs.cs  WeatherForecast.cs
BuildLog/: OpenSSLBuildLog.md  VcpkgBuildLog.md
BuildLog/Darknet/: DarknetBuildLog.md  build0.2.5.4a-CMakeCachedVars.txt  build0.2.5.4b-CMakeCachedVars.txt
BuildLog/OpenCV/: OpenCVBuildLog.md  OpenCVBuildTips.md  build4.5.5a-CMakeCachedVars.txt  build4.5.5a-getBuildInformation.txt
BuildLog/POCO/: POCOBuildLog.md  build1.11.1a-CMakeCachedVars.txt  build1.11.1b-CMakeCachedVars.txt  build1.11.1c-CMakeCachedVars.txt
Maui/MauiApp1/: MauiApp1.sln
Maui/MauiBlazorApp1/: MauiBlazorApp1.sln  README.md
SetupGuide/: SetupCUDA.md
SetupGuide/CUDA/: SetupCUDA.md  check-cuda-tf.py  check-cuda-torch.py
SetupGuide/Detectron2/: SetupDetectron2.md  conda_Detectron2.yml
SetupGuide/MMDetection/: SetupMMDetection.md  SetupMMDetectionV2.23+cu111.md  SetupMMDetectionV2.23+cu117_failed.md  SetupMMDetectionV2.24+cu117.md  conda_MMDetection.yml  conda_MMDetection2.23+cu111.yml  conda_MMDetection2.24+cu117.yml  conda_pytorch1.13.0+cu117-condainstall.yml  conda_pytorch1.13.0+cu117-pip3install.yml
SetupGuide/MaskRCNN/: MaskRCNN.md
SetupGuide/RobustVideoMatting/: SetupRVM+cu117.md  conda_RVM+cu117.yml
SetupGuide/ViTPyTorch/: SetupViTPyTorch.md  conda_vitpytorch.yml
SetupGuide/Whisper/: SetupWhisper.md  conda_Wisper.yml
SetupGuide/WhiteBoxCartoonization/: SetupWhiteBoxCartoonization.md  conda_WhiteBoxCartoonization.yml
Uno/Gtk-WPF/: README.md
Uno/Gtk-WinUI/: README.md
Uno/LiveCharts/: README.md
WebView2/ipc-cpp/: WebView2GettingStarted.vcxproj
WebView2/ipc-wv2/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ipc-wv2.csproj  ipc-wv2.sln
cv/CvCppUsage/: CvCppUsage.sln
cv/CvSharpUsage/: CvSharpUsage.sln
cv/WpfVideoCapture/: WpfVideoCapture.sln
cv_cap_gst/: cv_cap_gst.sln
cv_cap_gst/cv_cap_gst/: cv_cap_gst.cpp  cv_cap_gst.py  cv_cap_gst.vcxproj  cv_cap_gst.vcxproj.filters
cv_cap_gst_vp9/: cv_cap_gst_vp9.sln
cv_cap_gst_vp9/cv_cap_gst_vp9/: cv_cap_gst_vp9.cpp  cv_cap_gst_vp9.vcxproj  cv_cap_gst_vp9.vcxproj.filters
cv_cap_mfx/: cv_cap_mfx.sln
cv_cap_mfx/cv_cap_mfx/: cv_cap_mfx.cpp  cv_cap_mfx.py  cv_cap_mfx.vcxproj  cv_cap_mfx.vcxproj.filters
cv_cudacodec/: cv_cudacodec.sln
cv_cudacodec/cv_cudacodec/: cv_cudacodec.cpp  cv_cudacodec.vcxproj  cv_cudacodec.vcxproj.filters
cv_videoio_gst_h264/: cv_videoio_gst_h264.sln
cv_videoio_gst_h264/cv_videoio_gst_h264/: cv_videoio_gst_h264.cpp  cv_videoio_gst_h264.vcxproj  cv_videoio_gst_h264.vcxproj.filters
qt/QtCreator4CMakeBehavior/: README.md
qt/QtCreator4CMakeBehavior/myapp/: CMakeLists.txt  mainwindow.cpp
qt/QtCreator4CMakeBehavior/myapp/myliba/: CMakeLists.txt  myliba.cpp  myliba.h  myliba_global.h
qt/render_bmp_as_movie/: CMakeLists.txt  captureqthread.cpp  captureqthread.h  capturestdthread.cpp  capturestdthread.h  glplaywidget.cpp  glplaywidget.h  imagecapturethread.cpp  imagecapturethread.h  imageprocessorthread.cpp  imageprocessorthread.h  main.cpp  myutilities.cpp  myutilities.h  mywindow1.cpp  mywindow1.h  mywindow1.ui  mywindow2.cpp  mywindow2.h  mywindow2.ui  mywindow3.cpp  mywindow3.h  mywindow3.ui  mywindow4.cpp  mywindow4.h  mywindow4.ui  queuechannel.h  readme.txt  render_bmp_as_movie.pro  videodevicethread.cpp  videodevicethread.h
(+95 files in other folders)
